<resources>
    <string name="app_name">Quarto</string>
    <string name="play">Play</string>
    <string name="stats">Stats</string>
    <string name="turn">Player 1\'s Turn</string>
    <string name="p1turnPlace">Player 1\'s Turn to Place</string>
    <string name="p2turnPlace">Player 2\'s Turn to Place</string>
    <string name="p1turnGive">Player 1\'s Turn to Give</string>
    <string name="p2turnGive">Player 2\'s Turn to Give</string>
    <string name="give">Give Piece</string>
    <string name="place">Place Piece</string>
    <string name="action_settings">Settings</string>
    <string name="p1wins">Player 1 Wins!</string>
    <string name="p2wins">Player 2 Wins!</string>
    <string name="draw">The game ends in a Draw!</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="history">Game Move History</string>
    <string name="rematch">Rematch!</string>
    <string name="quit">Quit</string>
    <string name="new_game_string">New Game</string>
    <string name="quit_game_string">Quit</string>
    <string name="easy">Easy AI</string>
</resources>
