<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_alignParentTop="true"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    android:weightSum="12">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/app_name"
        android:id="@+id/title_textview"
        android:layout_margin="5dp"
        android:padding="20dp"
        android:layout_weight="4"
        />


    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/play"
        android:id="@+id/play_button"
        android:layout_gravity="center_vertical"
        android:layout_weight="4"
        android:background="@color/button_material_light"
        android:textColor="@color/primary_text_default_material_light"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp"
        android:onClick="launchGame"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/stats"
        android:id="@+id/stats_button"
        android:layout_gravity="center_vertical"
        android:layout_weight="4"
        android:background="@color/button_material_light"
        android:textColor="@color/primary_text_default_material_light"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp"/>



</LinearLayout>